--- a/androidapp/app/src/main/res/layout/activity_main.xml
+++ b/androidapp/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.signin.Webmain">
+
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="236dp"
         android:text="renew"
         ></Button>
+    <Button
+        android:id="@+id/bbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="236dp"
+        android:layout_marginEnd="70dp"
+        android:text="back"
+        ></Button>
+
+
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello World!"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/button"
+        android:layout_marginTop="10dp"
+        android:text="Hello World!"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"></WebView>
 
-    </WebView>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/webview"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="98dp"
+        android:layout_marginTop="489dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="114dp"
+        android:text="Waiting for detecting..."
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15dp" />
+
 
 </RelativeLayout>
